@startuml
title SO DO LOP 3 TANG - XET DUYET HO SO NHAN PHONG

top to bottom direction
skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 55
skinparam ranksep 75
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #FFFACD
  BorderColor #9B7B7B
}

package "TANG GIAO DIEN" as GUI_LAYER #EDF9EC {
  class MHXetDuyetHoSo #BFE8BA {
    - lblTieuDeHoSoChoDuyet: Label
    - lblSoLuongHoSoChoDuyet: Label
    - txtTimKiemHoSo: TextBox
    - pnlDanhSachHoSo: Panel
    - cardHoSo: Panel
    - lblMaHoSoCard: Label
    - lblTenKhachCard: Label
    - lblPhongCard: Label
    - badgeChoDuyetCard: Badge
    - lblMaHoSoDangChon: Label
    - lblTenKhachDangChon: Label
    - lblPhongDangChon: Label
    - badgeTrangThaiChoDuyet: Badge
    - dgvThanhVien: Table
    - colSTT: TableColumn
    - colHoVaTen: TableColumn
    - colDacDiem: TableColumn
    - colQuocTich: TableColumn
    - colGiayTo: TableColumn
    - colSDT: TableColumn
    - colHanhDong: TableColumn
    - btnXemChiTiet: Button
    - btnTuChoiThanhVien: Button
    - btnHoanTac: Button
    - lblSubflowDuyetTheoThanhVien: Label
    - btnDuyetToanBo: Button
    - btnDuyetThanhVienConLai: Button
    - btnTuChoiHoSo: Button
    --
    + taiDanhSachHoSoChoDuyet()
    + clickChonHoSo()
    + clickXemChiTietThanhVien()
    + clickTuChoiThanhVien()
    + clickDuyetToanBo()
    + clickDuyetThanhVienConLai()
    + clickTuChoiHoSo()
    + clickHoanTac()
  }

}

package "TANG NGHIEP VU" as BUS_LAYER #FFF9E6 {
  class XetDuyetHoSo #F4E3A2 {
    + LayDanhSachChoDuyet(text: String): IReadOnlyList<PhieuCoc>
    + LayChiTiet(maPhieuCoc: String): PhieuCoc
    + DuyetToanBo(maPhieuCoc: String): PhieuCoc
    + TuChoiThanhVien(maPhieuCoc: String, maKH: String)
    + DuyetThanhVienConLai(maPhieuCoc: String): PhieuCoc
    + TuChoiHoSo(maPhieuCoc: String)
    + HoanTacThanhVien(maPhieuCoc: String, maKH: String)
  }

  class PhieuCoc #F4E3A2 {
    - MaPhieuCoc: String
    - HanThanhToan: DateTime
    - HinhThucThue: String
    - SoGiuongThue: Integer
    - TongTien: Decimal
    - ThoiDiemCoc: DateTime
    - AnhMinhChung: String
    - PhuongThucThanhToan: String
    - LyDoYeuCauBoSung: String
    - TrangThai: String
    - MaKH: String
    - MaPhong: String
    - MaNV: String
    - KhachHang: KhachHang
    - Phong: Phong
    - Giuongs: List<Giuong>
    - ThanhViens: List<ThanhVienDangKy>
    --
    + LayDanhSachChoDuyet(text: String): IReadOnlyList<PhieuCoc>
    + LayChiTietChoDuyet(maPhieuCoc: String): PhieuCoc
    + DocChiTiet(maPhieuCoc: String): PhieuCoc
    + KiemTraCoTheXetDuyet()
    + CapNhatTrangThaiDaDuyet()
    + CapNhatTrangThaiDaHuy()
    + CapNhatTrangThaiDaDuyetDB()
    + CapNhatTrangThaiDaHuyDB()
  }

  class ThanhVienDangKy #F4E3A2 {
    - MaPhieuCoc: String
    - MaKH: String
    - VaiTro: String
    - TrangThaiDuyet: String
    - KhachHang: KhachHang
    --
    + LayDanhSachThanhVien(maPhieuCoc: String): IReadOnlyList<ThanhVienDangKy>
    + KiemTraTonTaiDaiDien(maPhieuCoc: String): Boolean
    + DanhDauTuChoi(maPhieuCoc: String, maKH: String): Boolean
    + DuyetTatCaThanhVien(maPhieuCoc: String): Boolean
    + TuChoiTatCaThanhVien(maPhieuCoc: String): Boolean
    + DuyetThanhVienConLai(maPhieuCoc: String): Boolean
    + DemThanhVienHopLe(maPhieuCoc: String): Integer
    + HoanTac(maPhieuCoc: String, maKH: String): Boolean
  }

  class KhachHang #F4E3A2 {
    - MaKH: String
    - HoTen: String
    - NgaySinh: DateTime
    - GioiTinh: String
    - QuocTich: String
    - LoaiGiayTo: String
    - SoGiayTo: String
    - DiaChiThuongTru: String
    - SDT: String
    - Email: String
    --
    + LayDanhSachKhachTheoPhieuCoc(maPhieuCoc: String): List<KhachHang>
  }

  class Phong #F4E3A2 {
    - MaPhong: String
    - SoPhong: String
    - ToaNha: String
    - Tang: String
    - GioiTinhChoPhep: String
    - TrangThai: String
    - MaLP: String
    - MaCN: String
    - LoaiPhong: LoaiPhong
    --
    + KiemTraSucChua(soLuongThanhVien: Integer, soGiuongThue: Integer, sucChuaPhong: Integer, hinhThucThue: String): Boolean
    + KiemTraGioiTinhChoPhep(dsKhach: IReadOnlyList<KhachHang>): Boolean
  }

  class LoaiPhong #F4E3A2 {
    - MaLP: String
    - TenLoaiPhong: String
    - SucChua: Integer
    - GiaThue: Decimal
  }

  class Giuong #F4E3A2 {
    - MaGiuong: String
    - SoGiuong: String
    - TrangThai: String
    - MaPhong: String
    --
    + CapNhatDanhSachDaCoc(dsMaGiuong: IReadOnlyList<String>)
    + CapNhatDanhSachTrong(dsMaGiuong: IReadOnlyList<String>)
  }
}

package "TANG TRUY CAP DU LIEU" as DAL_LAYER #EDF6FC {
  class PhieuCocDB #BFDCF0 {
    + LayDanhSachChoDuyet(text: String): IReadOnlyList<PhieuCoc>
    + LayChiTietChoDuyet(maPhieuCoc: String): PhieuCoc
    + DocChiTiet(maPhieuCoc: String): PhieuCoc
    + CapNhatDaDuyet(phieu: PhieuCoc)
    + CapNhatDaHuy(phieu: PhieuCoc)
  }

  class ThanhVienDangKyDB #BFDCF0 {
    + GetByMaPhieuCoc(maPhieuCoc: String): IReadOnlyList<ThanhVienDangKy>
    + UpdateTrangThaiDuyet(maPhieuCoc: String, maKH: String, trangThaiDuyet: String): Boolean
    + UpdateTatCaTrangThaiDuyet(maPhieuCoc: String, trangThaiDuyet: String): Boolean
    + UpdateThanhVienConLaiHopLe(maPhieuCoc: String): Boolean
    + CountThanhVienHopLe(maPhieuCoc: String): Integer
  }

  class KhachHangDB #BFDCF0 {
    + GetByMaPhieuCoc(maPhieuCoc: String): List<KhachHang>
  }

  class GiuongDB #BFDCF0 {
    + UpdateTrangThaiBatch(dsMaGiuong: IReadOnlyList<String>, trangThai: String)
  }
}

' Boundary dieu khien use case xet duyet ho so.
MHXetDuyetHoSo  o--  XetDuyetHoSo
' Use case dieu phoi cac entity.
XetDuyetHoSo  o--  PhieuCoc
XetDuyetHoSo  o--  ThanhVienDangKy
XetDuyetHoSo  o--  KhachHang
XetDuyetHoSo  o--  Giuong

' Trong BLL: duong thang, khong huong.
PhieuCoc "1" -- "1..*" ThanhVienDangKy : gom
PhieuCoc "0..*" -- "1" KhachHang : dai dien
PhieuCoc "0..*" -- "1" Phong : dat
ThanhVienDangKy "0..*" -- "1" KhachHang : thong tin
Phong "0..*" -- "1" LoaiPhong : thuoc

' Aggregation giua business va data access.
PhieuCoc  o--  PhieuCocDB
ThanhVienDangKy  o--  ThanhVienDangKyDB
KhachHang  o--  KhachHangDB
Giuong  o--  GiuongDB


GUI_LAYER -[hidden]down- BUS_LAYER
BUS_LAYER -[hidden]down- DAL_LAYER
XetDuyetHoSo -[hidden]down- PhieuCocDB
Giuong -[hidden]down- PhieuCocDB
@enduml
